--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,150 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif, var(--font-pretendard);
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-pretendard);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 600;
+}
+
+h1 {
+  font-size: 2.5rem;
+  line-height: 3.25rem;
+  margin-top: 6.5rem;
+  margin-bottom: 1.625rem;
+}
+
+h2 {
+  font-size: 1.6875rem;
+  line-height: 2.4375rem;
+}
+
+h2,
+h3 {
+  margin-top: 3.25rem;
+  margin-bottom: 0.8125rem;
+}
+
+h3 {
+  font-size: 1.375rem;
+  line-height: 1.625rem;
+}
+
+h4 {
+  font-size: 1.2rem;
+  margin-top: 2.4375rem;
+}
+
+h4,
+h5 {
+  line-height: 1.625rem;
+  margin-bottom: 0.8125rem;
+}
+
+h5,
+h6 {
+  font-size: 1rem;
+  margin-top: 4.0625rem;
+}
+
+h6 {
+  line-height: 1.625rem;
+  margin-bottom: 0.8125rem;
+}
+
+img {
+  max-width: 100%;
+  margin: inherit auto;
+}
+
+hr,
+img {
+  border: 0;
+  display: block;
+}
+
+hr {
+  color: #222;
+  height: 1.625rem;
+  margin: 3.25rem auto;
+  background-size: 100% 26px;
+  background-image: linear-gradient(
+    180deg,
+    transparent 1px,
+    transparent 11px,
+    #222 0,
+    #222 15px,
+    transparent 0,
+    transparent 26px
+  );
+  width: 6.25rem;
+}
+
+/* a {
+  color: #5d93ff;
+  text-decoration: none;
+  word-break: break-all;
+} */
+
+/* a:active,
+a:focus,
+a:hover {
+  color: #f7a046;
+} */
+
+b,
+strong {
+  font-weight: 600;
+}
+
+ul {
+  list-style: square;
+  margin-bottom: 1.625rem;
+}
+
+ul li {
+  padding: 0 0.3125rem;
+  margin-bottom: 0.625rem;
+}
+
+p {
+  line-height: 1.625rem;
+  margin-bottom: 1.625rem;
+}
+
+blockquote {
+  padding: 0;
+  font-style: italic;
+  text-align: center;
+}
+
+figure {
+  display: block;
+  width: 100%;
+  height: auto;
+}
+
+figcaption {
+  line-height: 1.21875rem;
+  margin-top: 0.40625rem;
+  color: #222;
+  font-size: 0.875rem;
+  font-style: italic;
+  margin-bottom: 0;
+  text-align: center;
 }
 
 @layer utilities {
@@ -20,7 +162,7 @@ body {
     --card-foreground: 0 0% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 0 0% 3.9%;
-    --primary: 0 0% 9%;
+    --primary: 120 61% 50%;
     --primary-foreground: 0 0% 98%;
     --secondary: 0 0% 96.1%;
     --secondary-foreground: 0 0% 9%;
